[package]
name = "egui_btleplug_example"
version = "0.1.1"
edition = "2021"

[dependencies]
btleplug = "0.11.6"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29"
egui_extras = "0.29.1"
egui_dock = "0.14.0"
futures = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
uuid = "1.11.0"
